Build the update check's URL through URI, not the deprecated constructor
JDK 20 deprecated java.net.URL's public constructors, so every release run
annotated the deb and dmg legs with "[deprecation] URL(String) in URL has
been deprecated". The msi leg emits the same warning and is not annotated
only because setup-java's javac problem matcher does not match the runner's
backslash paths, and the release job does not emit it at all because it
compiles with Java 11, where the constructor is not deprecated. The three
bundle legs use Java 21 for jpackage, and javac.deprecation=true is what
puts the warning in their logs.

The annotation's "path" is ".github", which is GitHub's fallback when the
matcher's absolute path resolves to no file in the repository, so the only
true thing in it was the line number.

URI.create(s).toURL() gives an identical URL for the constant both callers
pass. The behavioural difference is unreachable from here: a syntactically
bad string now raises an unchecked IllegalArgumentException rather than the
MalformedURLException both call sites catch, and neither of them takes a
string from anywhere but RELEASES_LATEST_URL.

A clean `ant jar` on JDK 21 now compiles the whole tree with no deprecation
warning at all.